# chat-bot-demo

./: README.md  pyproject.toml
src/chat_bot_demo/: __init__.py  __main__.py  config.py  tui.py
src/chat_bot_demo/agent/: __init__.py  service.py
src/chat_bot_demo/demo_data/: company_overview.md  pricing.md  refund_policy.md  support_playbook.md
src/chat_bot_demo/tools/: __init__.py  file_read.py
tests/: test_chat_session.py  test_file_read.py  test_tui.py
