[project]
name = "chat-bot-demo"
version = "0.1.0"
description = "A Textual chatbot demo with local file-reading tool support."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic-ai>=1.67.0",
  "textual>=0.70.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[project.scripts]
chat-bot-demo = "chat_bot_demo.__main__:main"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chat_bot_demo"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
